--- a/dev.env
+++ b/dev.env
@@ -3,3 +3,5 @@ DB_SOURCE="postgresql://postgres:root@localhost:5432/simple_bank?sslmode=disable
 SERVER_ADDRESS="0.0.0.0:8080"
 TOKEN_SYMMETRIC_KEY="123s5678901234567890123456789012"
 ACCESS_TOKEN_DURATION="15m"
+REFRESH_TOKEN_DURATION=24h
+GRPC_DOMAIN=0.0.0.0:9090
