--- a/dev.env
+++ b/dev.env
@@ -1,5 +1,6 @@
 DB_DRIVER="postgres"
 DB_SOURCE="postgresql://postgres:root@localhost:5432/simple_bank?sslmode=disable"
+MIGRATION_URL=file://db/migrations
 SERVER_ADDRESS="0.0.0.0:8080"
 TOKEN_SYMMETRIC_KEY="123s5678901234567890123456789012"
 ACCESS_TOKEN_DURATION="15m"
