--- a/dev.env
+++ b/dev.env
@@ -6,3 +6,5 @@ TOKEN_SYMMETRIC_KEY="123s5678901234567890123456789012"
 ACCESS_TOKEN_DURATION="15m"
 REFRESH_TOKEN_DURATION=24h
 GRPC_DOMAIN=0.0.0.0:9090
+REDIS_URL=0.0.0.0:6379
+ENV=dev
